--- a/cpt-details.tex
+++ b/cpt-details.tex
@@ -1,4 +1,4 @@
-\chapter{Under the Hood}
+\chapter{Implementation Notes}
 
 \cvmfs\ has a modular structure and relies on several open source libraries.
 Figure~\ref{fig:cvmfsblocks} shows the internal building blocks of \cvmfs.
