--- a/cvmfstech.tex
+++ b/cvmfstech.tex
@@ -123,6 +123,7 @@
 \appendix
 %\include{apx-releasemgr}
 \include{apx-rpms}
+\include{apx-parameters}
 
 \pagestyle{plain}
 \bibliographystyle{alpha}
