--- a/references.bib
+++ b/references.bib
@@ -1,4 +1,28 @@
 
+@techreport{rfc3530,
+        Author = {S. Shepler and B. Callaghan and D. Robinson and R. Thurlow and C. Beame and M. Eisler and D. Noveck},
+        Days = 15,
+        Institution = {Internet Engineering Task Force},
+        Month = apr,
+        Number = 3530,
+        Title = {{Network File System (NFS) version 4 Protocol}},
+        Type = {RFC},
+        Url = {http://www.rfc-editor.org/rfc/rfc3530.txt},
+        Year = 2003,
+        Bdsk-Url-1 = {http://www.rfc-editor.org/rfc/rfc3530.txt}}
+
+@techreport{rfc1813,
+        Author = {B. Callaghan and B. Pawlowski and P. Staubach},
+        Days = 15,
+        Institution = {Internet Engineering Task Force},
+        Month = jun,
+        Number = 1813,
+        Title = {{NFS Version 3 Protocol Specification}},
+        Type = {RFC},
+        Url = {http://www.rfc-editor.org/rfc/rfc1813.txt},
+        Year = 1995,
+        Bdsk-Url-1 = {http://www.rfc-editor.org/rfc/rfc1813.txt}}
+
 @techreport{unionfs04,
         Author = {Charles P. Wright and Jay Dave and Puja Gupta and Harikesavan Krishnan and Erez Zadok and Mohammad Nayyer Zubair},
         Date-Added = {2011-10-17 17:17:03 +0200},
