--- a/cpt-quickstart.tex
+++ b/cpt-quickstart.tex
@@ -86,6 +86,7 @@ For instance, running the command \texttt{ls /cvmfs/atlas.cern.ch} will mount th
 This directory gets automatically unmounted after some \product{automount}-defined idle time.
 
 \section{Debugging Hints}
+\label{sct:debugginghints}
 
 In order to check for common misconfigurations in the base setup, run
 \begin{verbatim}
