--- a/cpt-configure.tex
+++ b/cpt-configure.tex
@@ -18,8 +18,10 @@ For a list of all parameters, see Appendix~\ref{apx:parameters}.
 
 \begin{table}
 	\begin{center}
-		\begin{tabularx}{\linewidth}{l|X}
-			{\bf\centering File} & {\bf\centering Purpose} \\\hline
+		\begin{tabularx}{\linewidth}{lX}
+			\toprule
+			{\bf\centering File} & {\bf\centering Purpose} \\
+			\midrule
 			\texttt{config.sh} & Set of internal helper functions \\
 			\texttt{default.conf} & Set of parameters reflecting the standard configuration \\
 			\texttt{site.conf} & Site specific set of parameters that overwrites the standard configuration.  
@@ -27,6 +29,7 @@ For a list of all parameters, see Appendix~\ref{apx:parameters}.
 			\texttt{domain.d/\$domain.conf} & Domain-specific parameters and implementations of the functions in \texttt{config.sh} \\
 			\texttt{config.d/\$repository.conf} & Repository-specific parameters and implementations of the functions in \texttt{config.sh} \\
 			\texttt{keys/*.pub} & Public keys used to verify the digital signature of file catalogs \\
+			\bottomrule
 		\end{tabularx}
 	\end{center}
 	\caption{List of configuration files for \cvmfs\ in \texttt{/etc/cvmfs}}
@@ -144,16 +147,100 @@ A sample entry /etc/fstab entry on a client:
 \end{verbatim}
 
 
-\section{Private File System Mountpoints}
-privately by users (in private location)
-not considered by tools (cvmfs\_talk, cvmfs\_config)
-appears as fuse fs name (like sshfs)
+\section{Mounting}
+Typically, mounting of \cvmfs\ repositories is handled by \autofs.
+Just by accessing a repository directory under /cvmfs (\eg /cvmfs/atlas.cern.ch), \autofs\ will take care of mounting.
+\autofs\ will also automatically unmount a repository if it is not used for a while.
+
+Instead of using \autofs, \cvmfs\ repositories can be mounted manually with the system's \texttt{mount} command.
+In order to do so, use the \texttt{cvmfs} file system type, like
+\begin{verbatim}
+  mount -t cvmfs atlas /cvmfs/atlas.cern.ch
+\end{verbatim}
+Likewise, \cvmfs\ repositories can be mounted through entries in /etc/fstab.
+A sample entry in /etc/fstab:
+\begin{verbatim}
+  atlas.cern.ch /mnt/test cvmfs defaults 0 0
+\end{verbatim}
+
+Every mount point corresponds to a \cvmfs\ process.
+Using \autofs\ or the system's mount command, every repository can only be mounted once.
+Otherwise multiple \cvmfs\ processes would collide in the same cache location.
+If a repository is needed under several paths, use a \emph{bind mount} or use a private file system mount point (see Section~\ref{sct:privatemount}).
+
+\subsection{Private Mount Points}
+\label{sct:privatemount}
+In contrast to the system's \texttt{mount} command which requires root privileges, \cvmfs\ can also be mounted like other Fuse file systems by normal users.
+In this case, \cvmfs\ uses parameters from one or several user-provided config files instead of using the files under /etc/cvmfs.
+\cvmfs\ private mount points do not appear as \texttt{cvmfs2} file systems but as \texttt{fuse} file systems.
+The \texttt{cvmfs\_config} and \texttt{cvmfs\_talk} commands do not affect privately mounted \cvmfs\ repositories.
+On an interactive machine, private mount points are for instance unaffected by an administrator unmounting all system's \cvmfs\ mount points by \texttt{cvmfs\_config unmount}.
+
+In order to mount \cvmfs\ privately, use the \texttt{cvmfs2} command like
+\begin{verbatim}
+  cvmfs2 -o config=myparams.conf atlas.cern.ch /home/user/myatlas
+\end{verbatim}
+A minimal sample myparams.conf file could look like this:
+\begin{verbatim}
+  CVMFS_CACHE_BASE=/home/user/mycache
+  CVMFS_SERVER_URL=http://cvmfs-stratum-one.cern.ch/opt/atlas
+  CVMFS_HTTP_PROXY=DIRECT
+  CVMFS_PUBLIC_KEY=/etc/cvmfs/keys/cern.ch.pub:\
+    /etc/cvmfs/keys/cern-it1.cern.ch.pub:\
+    /etc/cvmfs/keys/cern-it3.cern.ch.pub
+\end{verbatim}
+
+Make sure to use absolute path names for the mount point and for the cache directory.
+Use \texttt{fusermount -u} in order to unmount a privately mounted \cvmfs\ repository.
+
+\section{Hotpatching and Reloading}
+By hotpatching a running \cvmfs\ instance, most of the code can be reloaded without unmounting the file system.
+The current active code is unloaded and the code from the currently installed binaries is reloaded.
+Hotpatching is logged to syslog.
+Since \cvmfs\ is re-initialized during hotpatching and configuration parameters are re-read, hotpatching can be also seen as a ``reload''.
+
+Hotpatching has to be done for all repositories concurrently by
+\begin{verbatim}
+  cvmfs_config [-c] reload
+\end{verbatim}
+The optional parameter \texttt{-c} specifies if the \cvmfs\ cache should be wiped out during the hotpatch.
+Reloading of the parameters of a specific repository can be done like
+\begin{verbatim}
+  cvmfs_config reload atlas.cern.ch
+\end{verbatim}
+In order to see the history of loaded CernVM-FS Fuse modules, run
+\begin{verbatim}
+  cvmfs_talk hotpatch history
+\end{verbatim}
+The currently loaded set of parameters can be shown by
+\begin{verbatim}
+  cvmfs_talk parameters
+\end{verbatim}
+The \cvmfs\ packages use hotpatching in order to update previous versions.
 
 
 \section{Auxiliary Tools}
 \label{sct:tools}
 
 \subsection{cvmfs\_fsck}
+\cvmfs\ assumes that the local cache directory is trustworthy.
+However, it might happen that files get corrupted in the cache directory caused by errors outside the scope of \cvmfs.
+\cvmfs\ stores files in the local disk cache with their cryptographic content hash key as name, which makes it fairly easy to verify file integrity.
+\cvmfs\ contains the \texttt{cvmfs\_fsck} utility to do so for a specific cache directory. 
+Its return value is comparable to the system's \texttt{fsck}.
+For example,
+\begin{verbatim}
+  cvmfs_fsck -j 8 /var/lib/cvmfs/shared
+\end{verbatim}
+checks all the data files and catalogs in \texttt{/var/lib/cvmfs/shared} using 8 concurrent threads.  
+Supported options are:
+
+\begin{tabularx}{\linewidth}{lX}
+	\texttt{-v}				& Produce more verbose output.\\
+	\texttt{-j \#threads}	& Sets the number of concurrent threads that check files in the cache directory. Defaults to 4. \\
+	\texttt{-p} 			& Tries to automatically fix problems. \\
+	\texttt{-f} 			& Unlinks the cache database.  The database will be automatically rebuilt by \cvmfs\ on next mount.\\
+\end{tabularx}
 
 \subsection{cvmfs\_config}
 
@@ -163,135 +250,13 @@ appears as fuse fs name (like sshfs)
 df -h -i, 
 Nagios check
 
-The variables you can set in /etc/cvmfs/default.local roughly correspond to mount options of the Fuse module.
-See Section~\ref{sct:mount} for a comprehensive list of mount options.
-Table~\ref{tbl:parameters} lists the known configuration parameters.
-To make changes to the parameters effective, the cvmfs service has to be restarted by \lstinline{service cvmfs restart}.
-\begin{table}
-	\begin{center}
-		\begin{tabularx}{\linewidth}{l|X}
-			{\bf\centering Parameter} & {\bf\centering Meaning} \\\hline
-			\tt CVMFS\_REPOSITORIES & Comma-separated list of fully qualified repository names that shall be mountable under /cvmfs.\\
-			\tt CVMFS\_HTTP\_PROXY & Sets the \texttt{proxies} mount option. \cvmfs\ supports random selection of a listed proxy server in order to balance their load load. See Section~\ref{sct:proxies} on how to use lists of proxy servers.  This parameter is required.\\
-			\tt CVMFS\_TIMEOUT & Timout in seconds for HTTP requests with a proxy server.\\
-			\tt CVMFS\_TIMEOUT\_DIRECT & Timout in seconds for HTTP requests without a proxy server.\\
-			\tt CVMFS\_NFILES & Sets the \texttt{nofiles} mount option.\\
-			\tt CVMFS\_CACHE\_BASE & Sets the parent directory of the \texttt{cachedir} mount option. The \texttt{\$CVMFS\_USER} has to be owner of this directory.\\
-			\tt CVMFS\_SERVER\_URL & Sets the repository url having \texttt{@org@} as placeholder for the repository. Usually set for a domain. Example: \url{http://cernvm-webfs.cern.ch/opt/@org@} \\
-			\tt CVMFS\_PUBLIC\_KEY & Sets \texttt{pubkey} mount option.  Usually set for a domain. \\
-			\tt CVMFS\_STRICT\_MOUNT & If set to yes, only repositories listed in \texttt{CVMFS\_REPOSITORIES} can be mounted. \\
-			\tt CVMFS\_FORCE\_SIGNING & If set to yes, only digitally signed repositories can be mounted. \\
-			\tt CVMFS\_SYSLOG\_LEVEL & Sets the \texttt{syslog\_level} mount option. \\
-			\tt CVMFS\_TRACEFILE & Sets the \texttt{tracefile} mount option.\\
-			\tt CVMFS\_DEBUGLOG & Specifies a debug log file.  Having this variable set, \cvmfs\ runs in debug mode which causes high load.  The debug log is different from normal log messages written to syslog.\\
-			\tt CVMFS\_MAX\_TTL & Sets the \texttt{max\_ttl} mount option.\\
-			\tt CVMFS\_USER & Sets the \texttt{gid} and \texttt{uid} mount options. Don't touch or overwrite.\\
-			\tt CVMFS\_OPTIONS & Set of standard Fuse options that are added. Don't touch or overwrite. \\
-			\tt CVMFS\_MOUNT\_DIR & Sets the \cvmfs root directory. Don't touch or overwrite. \\
-		\end{tabularx}
-	\end{center}
-	\caption{List of recognized parameters in \texttt{/etc/cvmfs/default.local}. For \cvmfs\ mount options see Section~\ref{sct:mount}.}
-	\label{tbl:parameters}
-\end{table}
 
-\subsection{Using Multiple Replicas}
-For reliability, multiple replica or mirror servers can be used by \cvmfs.
-To do so, set \texttt{CVMFS\_SERVER\_URL} to a semicolon-separated list of known replica servers (enclose in double quotes). 
-The so defined URLs are organized as a ring buffer.
-Whenever download of files fails from a server, \cvmfs\ automatically switches to the next mirror server.
-Additionally, on the first download and after every 1000 downloads, \cvmfs\ orders the list of servers according to the round trip time for downloading a file; it then switches automatically to the closest server.
-
-\section{Manually Mounting the \cvmfs\ Fuse Module}
-\label{sct:mount}
-In order to mount a remote HTTP repository manually onto a local mount point, use the following basic syntax
-\begin{lstlisting}[language=bash]
-mount -t cvmfs [-o $mount_options] $repository $mount_point
-\end{lstlisting}
-The \texttt{mount} command will invoke the \cvmfs\ mount helper \texttt{/sbin/mount.cvmfs}, which in turn will invoke the \texttt{cvmfs2} binary.
-The \texttt{\$mount\_point} is a path to an empty directory as with any other mount.
-The \cvmfs\ mount helper takes care of transforming the \texttt{\$repository} pseudo device into an HTTP URL, according to the \texttt{CVMFS\_SERVER\_URL} parameter.
-Additionally it specifies a set of default mount options listed in Table~\ref{tbl:stdoptions}.
-The \texttt{-f} option to the \texttt{mount} command does a \emph{dry run}, \ie it shows the command line that is used to invoke the \texttt{cvmfs2} process; this might be useful for debug purposes.
-
-\cvmfs\ has to be started as root; it will drop privileges to \texttt{\$CVMFS\_USER}.
-Useful mount options are\\
-\begin{tabularx}{\linewidth}{lX}
-	\lstinline{-o rebuild_cachedb} & The managed cache database is rebuilt from the cache directory. This might become necessary when \cvmfs\ was mounted once with \lstinline{quota_limit} and once without. \\
-	\lstinline{-o deep_mount} & Path prefix if a repository is mounted on a nested catalog, i.e. \lstinline{-o deep_mount=/software/15.0.1}. \\
-	\lstinline{-o force_signing} & \cvmfs\ will accept only signed catalogs.  This might create hard to find I/O errors, if a root catalog is signed but one of its nested catalogs is not.  Failures due to invalid signatures are written into syslog.\\
-	\lstinline{-o whitelist=<url>} & HTTP location of a signed white-list containing certificate fingerprints.  Only file catalogs from certificates referenced in this white-list are accepted as validly signed. Defaults to \texttt{<root url>/.cvmfswhitelist}.\\
-	\lstinline{-o pubkey=<pemfile>} & Public RSA key that is used to verify the the white-list signature.\\
-	\lstinline{-o syslog_level=<NUMBER>} & Sets the level used for syslog to DEBUG (1), INFO (2), or NOTICE (3). Default is NOTICE. Note that the level applies only to messages written into syslog, not to the debug log.  The debug log is a separate log facility that is turned on and off by the \texttt{CVMFS\_DEBUGLOG} parameter.\\
-\end{tabularx}
-See \lstinline{cvmfs2 --help} for a complete list of available mount options.
-
-\begin{table}
-	\begin{center}
-		\begin{tabularx}{\linewidth}{lX}
-			\lstinline{-o fsname=cvmfs2} & The \lstinline{mount} command will show \lstinline{cvmfs2} instead of \lstinline{fuse}. This is for convenience. \\
-			\lstinline{-o ro} & Marks the file system as read-only. \\
-			\lstinline{-o nodev} & Marks the file system as unrelated to any system device. \\
-			\lstinline{-o grab_mountpoint} & Changes the owner of the mount point to \texttt{\$CVMFS\_USER}. \\
-			\lstinline{-o kernel_cache} & Uses Linux file system buffers to cache file data. This option brings probably the biggest performance boost. Used in conjunction with \lstinline{auto_cache}. \\
-			\lstinline{-o auto_cache} & Invalidate changed files in the Linux file system buffers.  Used in conjunction with \lstinline{kernel_cache}.\\
-			\lstinline{-o allow_other} & Allows other users than the mounting user to access the file system. \\
-			\lstinline{-o entry_timeout} & \multirow{3}{\linewidth}{Specifies the maximum caching duration for file meta data in the kernel in seconds.  10 seconds is a reasonable value.}\\
-			\lstinline{-o negative_timeout} & \\
-			\lstinline{-o attr_timeout} & \\
-			\lstinline{-o max_ttl} & Specifies a maximum time to live for file catalogs in minutes.  That way, the repsonse time to updates can be improved (default is 1 hour).  Note that a shorter TTL will also stress the local Squids more.\\
-			\lstinline{-o quota_limit} & \multirow{7}{\linewidth}{If \lstinline{quota_limit} is specified, \cvmfs\ turns the local cache into a managed LRU cache. When the cache grows beyond the amount of MB specified by \lstinline{quota_limit}, \cvmfs\ removes files from the cache according to LRU until the size is below \lstinline{quota_threshold}. As a side effect, this restricts the maximum file size to \lstinline{quota_limit}-\lstinline{quota_threshold}.  In case only \lstinline{quota_limit=-1} is specified, the cache size is unrestricted.}\\
-			\lstinline{-o quota_threshold} & \\
-			 & \\
-			 & \\
-			 & \\
-			 & \\
-			 & \\
-			 & \\
-			\lstinline{-o nofiles} & Sets the maximum number of open files for CernVM-FS process (soft limit) to \texttt{\$CVMFS\_NFILES}.  Set this at least to 10\,000. \\
-			\lstinline{-o cachedir} & Sets the cache directory for the file and catalog cache. The cache directory will be created on demand; it has to be owned by \texttt{\$CVMFS\_USER}. \\
-			\lstinline{-o proxies} & Specifies the semicolon-separated list of forward proxy servers to \texttt{\$CVMFS\_PROXY}. \\
-			\lstinline{-o uid} & \multirow{2}{\linewidth}{Sets the user id and group id of \texttt{\$CVMFS\_USER}} \\
-			\lstinline{-o gid} & \\
-		\end{tabularx}
-	\end{center}
-	\caption{Mount options as added by \texttt{/etc/auto.cvmfs} with the default options defined in \texttt{/etc/cvmfs/default.conf}}
-	\label{tbl:stdoptions}
-\end{table}
-
-\section{Debugging}
+\section{Debug Logs}
 The \texttt{cvmfs2} binary forks a watchdog process on start.
-Using this watchdog, \cvmfs\ is able to create a stack trace in case certain signals (such as segmentation fault) are received.
+Using this watchdog, \cvmfs\ is able to create a stack trace in case certain signals (such as a segmentation fault) are received.
 The watchdog writes the stack trace into syslog as well as into a file \texttt{stacktrace} in the cache directory.
-The \texttt{cvmfs-talk} utility can be used to determine the PID of the main process (see~Section~\ref{sct:dynconf}).
 
-In addition to the \texttt{cvmfs2} binary, \cvmfs\ comes with a \texttt{cvmfs2\_debug} binary that is compiled with debug symbols and without optimization.
-In case there are any problems with \cvmfs, this binary can create a detailed log file.
-Also, it is compiled without optimizations for better examination by \product{gdb}.
-In order to create a log file, use the  \texttt{cvmfs2\_debug} and mount with the additional mount options
-\begin{lstlisting}[language=bash]
--o debug,logfile=$absolute_path
-\end{lstlisting}
-You will get the standard mount options by
-\begin{lstlisting}[language=bash]
-mount -f -t cvmfs $repository $mount_point
-\end{lstlisting}
-Alternatively, the mount helper will do the same having the \texttt{CVMFS\_DEBUGLOG} variable set to a file name.
-
-\cvmfs\ assumes that the local cache directory is trustworthy.
-However, it might happen that files get corrupted in the cache directory caused by errors outside the scope of \cvmfs.
-\cvmfs\ stores files in the local disk cache with their cryptographic content hash key as name, which makes it fairly easy to verify file integrity.
-\cvmfs\ contains the \texttt{cvmfs\_fsck} utility to do so for a specific cache directory. 
-Its return value is comparable to the system's \texttt{fsck}.
-For example,
-\begin{lstlisting}[language=bash]
-cvmfs_fsck -j 8 /var/cache/cvmfs2/atlas.cern.ch
-\end{lstlisting}
-checks all the data files and catalogs in \texttt{/var/cache/cvmfs2/atlas.cern.ch} using 8 concurrent threads.  
-Supported options are:
-
-\begin{tabularx}{\linewidth}{lX}
-	\lstinline{-j \#threads} & Sets the number of concurrent threads that check files in the cache directory. Defaults to 4. \\
-	\lstinline{-p} & Tries to automatically fix problems. \\
-	\lstinline{-f} & Unlinks the managed cache database (\cf Section \ref{sct:mamangedcache}), \ie it will be rebuilt by \cvmfs\ on next mount.\\
-\end{tabularx}
+In addition to the debugging hints in Section~\ref{sct:debugginghints}, \cvmfs\ can be started in debug mode.
+In the debug mode, \cvmfs\ will log with high verbosity which makes the debug mode unsuitable for production use.
+In order to turn on the debug mode, set \texttt{CVMFS\_DEBUGFILE=/tmp/cvmfs.log}.
 
