added reference for AUFS

--- a/references.bib
+++ b/references.bib
@@ -38,6 +38,11 @@
 	Howpublished = {\url{http://fuse.sourceforge.net}},
 	Title = {{Filesystem in Userspace (FUSE)}}}
 
+@misc{aufs,
+	Author = {Junjiro R. Okajima},
+	Howpublished = {\url{http://aufs.sourceforge.net/}},
+	Title = {{Aufs - Advanced multi ayered Unification FileSystem}}}
+
 @article{parrot05,
 	Author = {Douglas Thain and Miron Livny},
 	Journal = {Scalable Computing: Practice and Experience},
