Create and Update Repository - draft

--- a/cvmfstech.tex
+++ b/cvmfstech.tex
@@ -14,6 +14,7 @@
 \providecommand{\autofs}{{\scshape autofs}}
 \providecommand{\fuse}{{\scshape Fuse}}
 \providecommand{\fusex}{{\scshape Fuse4X}}
+\providecommand{\aufs}{{\scshape AUFS}}
 \providecommand{\nfs}{{\scshape nfs}}
 \providecommand{\afs}{{\scshape AFS}}
 \providecommand{\rpm}{{\scshape rpm}}
