--- a/cpt-repo.tex
+++ b/cpt-repo.tex
@@ -3,7 +3,6 @@
 
 Though in principle a \cvmfs\ repository is just a directory tree, it is converted into a \newterm{repository} format first.
 The repository format is in particular content addressable storage.
-We call the original directory tree \newterm{shadow tree}.
 This task includes creating the file catalog(s), compressing the files and calculating content hashes.
 Furthermore, we store the files in the same layout as the local \cvmfs\ cache on the server, \ie\ as SHA1 data chunks.
 We do so to exploit redundancy and in order to mangle the real file name into an SHA1 key when \cvmfs\ downloads files.
@@ -11,73 +10,77 @@ This circumvents certain firewall restrictions.
 For instance, many firewalls block an HTTP request to a file called \texttt{root.exe}.
 Figure~\ref{fig:installwebserver} outlines the repository generation.
 
-\begin{figure}
+\begin{figure}[h]
 	\begin{center}
-		\input{figures/install.tex}
+		\includegraphics[width=0.8\textwidth]{figures/update_process}
 	\end{center}
-	\caption{Converting a shadow tree into a repository. The file catalog contains the directory structure as well as file metadata, symbolic links, and secure hash keys of regular files. Regular files are compressed and renamed to their cryptographic content hash before copied into the data store.}
+	\caption{Updating a mounted \cvmfs\ repository by overlaying it with a copy-on-write \aufs\ volume. Any changes will be accumulated in a writable volume (yellow) and can be synchronized into the file catalogs afterwards. The file catalog contains the directory structure as well as file metadata, symbolic links, and secure hash keys of regular files. Regular files are compressed and renamed to their cryptographic content hash before copied into the data store. (NOTE: bitmap will be replaced by vector graphic once I managed to export it)}
 	\label{fig:installwebserver}
 \end{figure}
 
+\section{Repository Update Procedure}
+\label{sct:repoupdate}
 
-Since the repositories may contain many file system objects\footnote{For ATLAS, for example, ``many'' means order of $10^7$ file system objects (\ie number of regular files, symbolic links, and directories).}, we cannot afford to process an entire shadow tree from scratch for every update.
-Instead, we choose a journal based approach supported by the \redirfs\ kernel level framework~\cite{redirfs05}.
-The \redirfs\ framework hooks into VFS\footnote{Virtual File System Switch, an operating system abstraction layer for file systems.} calls and allows to install so-called filters.
-By installing a \cvmfs\ filter for \redirfs, we create a journal of file system changes which is processed by \texttt{cvmfs\_sync}.
-``Process the journal'' means that the shadow tree is synchronized with the repository.
+Since the repositories may contain many file system objects\footnote{For ATLAS, for example, ``many'' means order of $10^7$ file system objects (\ie number of regular files, symbolic links, and directories).}, we cannot afford to generate an entire repository from scratch for every update.
+Instead, we add a writable file system layer on top of a mounted read-only \cvmfs\ repository using an union file system called \aufs~\cite{aufs}.
+This renders a usual \cvmfs\ repository writable to the user, while all applied changes are stored in a special writable volume managed by \aufs.
+One could see the result as a virtual version of the \emph{shadow tree} we used for updating repositories in previous versions of \cvmfs.
+A similar approach is used by Linux Live Distributions that are shipped on read-only media, but allow \emph{virtual} editing of files while running the operating system directly from read-only storage.
+
+If a file in the \cvmfs\ repository gets changed, \aufs\ first copies it to the writable volume and applies any changes to this copy (copy-on-write semantics).
+\aufs\ will put newly created files or directories in the writable volume as well.
+Additionally it creates special hidden files (called white-outs) to keep track of file deletions in the \cvmfs\ repository.
+
+Eventually, all changes applied to the \emph{virtual shadow tree} are stored in \aufs's writable volume and can be merged into the actual \cvmfs\ repository by a subsequent synchronization step.
 This includes compression of new and updated files and updating of the file catalogs.
+Before the actual synchronization step takes place, no changes are applied to the \cvmfs\ repository itself.
+Therefore, any unsuccessful updates to a repository can be rolled back by simply clearing the writable file system layer of \aufs.
 
-\begin{table}
-	\begin{tabularx}{\linewidth}{lX}
-		\lstinline{/shadow} & This is a standard directory which will be watched by {\scshape inotify}. This directory will be seen by \cvmfs\ clients as read-only directory.  Install your software in here.\\
-		\lstinline{/pub} & Conatins everything that needs to be served by the webserver. \\
-		\lstinline{/pub/catalogs} & Contains the cvmfs catalogs and symlinks to \lstinline{/pub/data}.  Mimics the directory structure in \lstinline{/shadow} as far as necessary to provide all the entry points for catalogs.  For Apache servers, it is recommended to add a \lstinline{.htaccess} file in this directory allowing symlinks to be followed. \\
-		\lstinline{/pub/data} & The SHA1 data cache, looks like the cache directory on clients except that files reside in a compressed form.\\
-		\lstinline{/ctrl} & Contains zipped versions of old journals and may contain additional control files for \texttt{cvmfs\_sync}. \\
-	\end{tabularx}
-	\caption{Recommended directory layout of a repository.  These directories don't have to be in the root directory.  The \texttt{shadow}, the \texttt{ctrl}, and the \texttt{pub} directory don't have to be in the same parent directory.}
-	\label{tab:journaldirs}
-\end{table}
+\section{Requirements for a new Repository}
+\label{sct:newreporequirements}
 
-In order to create a repository, the server part of \cvmfs\ and the \cvmfs\ kernel modules are required.
-The server part and the kernel modules are available as rpms (see Section~\ref{apx:rpms}).
-The server tools contain the \texttt{cvmfs\_sync} and the \texttt{cvmfs\_zpipe}, \texttt{cvmfs\_sign}, \texttt{cvmfs\_pull}, \texttt{cvmfs\_scrum}, and \texttt{cvmfs\_clgcmp} tools as well as the \texttt{redirfs} and \texttt{cvmfsflt} kernel modules.
-Create the directory structure shown in Table~\ref{tab:journaldirs}.
-The directory and file names are mostly recommandations and fit to the example command line to start the \cvmfs\ server daemon, which is part of the \cvmfs\ \texttt{add-ons} directory.
+In order to create a repository, the server and client part of \cvmfs\ must be installed on your machine.
+Furthermore your machine should provide an \aufs\ enabled Kernel as well as a running \texttt{Apache2} web server.
+Currently we officially support Scientific Linux 5 and 6 as well as Ubuntu 12.04 distributions.
+Please note, that Scientific Linux 6 \emph{does not} ship with an \aufs\ enabled kernel, therefore we provide a compatible patched kernel as an rpm (see Section~\ref{apx:rpms}).
 
+Special care should be taken for the mount location of \cvmfs\ repositories.
 From the point of view of the file system, repositories are relocatable.
-However, many software installation tools hard-code the full path.
+However, many software installation tools hard-code the full path and therefore break relocatability on the application level.
 In effect, repositories have to be mounted at the same location that was used to install it on the release manager machine.
-By convention, \cvmfs\ repositories are mounted using  fully qualified repository name under \texttt{/cvmfs}, for instance at \texttt{/cvmfs/atlas.cern.ch}.
+By convention, \cvmfs\ repositories are mounted using their fully qualified repository name under \texttt{/cvmfs}, for instance at \texttt{/cvmfs/atlas.cern.ch}.
 
-Typically a repository publisher does the following steps in order to create or update a repository:
+\section{\cvmfs\ Repository Creation and Updating}
+\label{sct:repocreateandupdate}
+To control the server part of \cvmfs\ we provide the versatile \texttt{cvmfs\_server} utility that controls repository creation, updating, deletion, replication and investigation.
+Please run it without any parameters to get a short documentation of its commands.
+
+\subsection{Repository Creation}
+\label{sct:repocreation}
+
+Given you have successfully installed the \cvmfs\ server part on your machine, you can use \texttt{cvmfs\_server mkfs} to create a fresh repository:\\
+\texttt{cvmfs\_server mkfs my.repo.name}
+The utility will then ask you for a user that should act as the owner of the repository and afterwards create all the infrastructure for your new \cvmfs\ repository.
+Additionally it will create a reasonable default configuration and generate a new release manager certificate and software signing key. You should distribute the public key in \texttt{/etc/cvmfs/keys/my.repo.name} to all your client machines.
+Please note, that the \texttt{cvmfs\_server} utility will use \texttt{/srv/cvmfs} as storage location.
+In case you want to use a huge hard disk you should mount it there upfront.
+
+When all went fine you should see your repository mounted under \texttt{/cvmfs/my.repo.name} containing only a single file called \texttt{new\_repository}.
+Following this step, you can produce the first revision by going through the repository update procedure described in the next Section.
+
+\subsection{Repository Update}
+Typically a repository publisher does the following steps in order to create a new revision of a repository:
 \begin{enumerate}
-	\item Make the necessary changes to the shadow directory, \ie add new directories, patch certain binaries, \dots
+	\item Run \texttt{cvmfs\_server transaction} to switch to a copy-on-write enabled \cvmfs\ volume
+	\item Make the necessary changes to the repository, \ie add new directories, patch certain binaries, \dots
 	\item Test the software installation
-	\item Run the \texttt{cvmfs\_sync} utility and optionally the \texttt{cvmfs\_sign} utility.
-	\item Make the web server serve the new version of the pub directory.
+	\item Do one of the following:
+	\begin{itemize}
+		\item Run \texttt{cvmfs\_server publish} and optionally \texttt{cvmfs\_server resign} to finalize your new repository revision \emph{or}
+		\item Run \texttt{cvmfs\_server abort} to clear all changes and start over again
+	\end{itemize}
+	\item Make the web server serve the new version of the repository directory.
 \end{enumerate}
 
-\section{CernVM-FS Respository Out of the Box}
-Small organizations can use the \texttt{cvmfs\_server} script in order to easily create a new \cvmfs\ repository with reasonable defaults.
-Run without options for documentation.
-The tool expects an SL5 distribution with an \texttt{httpd} service running and \emph{no} \cvmfs\ client utilities.
-The server utilities and the client utilites are mutually exclusive.
-
-The \texttt{cvmfs\_server} uses the /srv/cvmfs area as storage. 
-So if you want to use a large hard disk, mount it there upfront.
-
-The necessary steps for a new repository are:
-\begin{enumerate}
-	\item \texttt{cvmfs\_server mkfs ams.iss.xz}
-	\item Install software in /cvmfs/ams.iss.xz as user cvmfs
-	\item \texttt{cvmfs\_server publish}
-	\item Every 30 days: \texttt{cvmfs\_server resign}
-\end{enumerate}
-
-Note that the software signing key and the release manager machine certificate are newly created as well.
-In particular, they are different from CERN repositories.
-In order to mount the so-created repositories on \cvmfs\ clients, push the public signing key /etc/cvmfs/keys/ams.iss.xz.pub from the release manager machine to the clients.
-A release manager machine can only manage one repository.
-
-
+Generally \cvmfs\ supports to have more than one repository on a single server machine, but then you need to specify which repository you want to operate on, when running the \texttt{cvmfs\_server} utility commands.
+Additionally you should run \texttt{cvmfs\_server resign} every 30 days to update the signatures of the repository.
