revised squid chapter

--- a/cpt-configure.tex
+++ b/cpt-configure.tex
@@ -247,7 +247,7 @@ Supported options are:
 \subsection{cvmfs\_config}
 The \texttt{cvmfs\_config} utility provides commands in order to setup the system for use with \cvmfs.
 \begin{description}
-	\item[setup] The \texttt{setup} takes care of basic setup tasks, such as creating the cvmfs user and allowing access to \cvmfs\ mount points by all users.
+	\item[setup] The \texttt{setup} command takes care of basic setup tasks, such as creating the cvmfs user and allowing access to \cvmfs\ mount points by all users.
 	\item[chksetup] The \texttt{chksetup} command inspects the system and the \cvmfs\ configuration in /etc/cvmfs for common problems.
 	\item [showconfig] The \texttt{showconfig} command prints the \cvmfs\ parameters for all repositories or for the specific repository given as argument.
 	\item [stat] The \texttt{stat} command prints file system and network statistics for currently mounted repositories.
