--- a/references.bib
+++ b/references.bib
@@ -1,4 +1,37 @@
 
+@article{squid99,
+        Author = {David Guerrero},
+        Journal = {Linux Journal},
+        Month = {Feburary},
+        Number = {58},
+        Title = {Caching the Web, Part 2},
+        Year = {1999}}
+
+@article{frontier08,
+        Author = {Barry Blumenfeld and David Dykstra and Lee Lueking and Eric Wicklund},
+        Journal = {Journal of Physics: Conference Series},
+        Title = {{CMS} Conditions Data Access using {FroNTier}},
+        Volume = {119},
+        Year = {2008}}
+
+@article{bloomsquid00,
+        Author = {Li Fan and Pei Cao and Jussara Almeida and Andrei Z. Broder},
+        Journal = {IEEE/ACM Transactions on Networking},
+        Keywords = {WP1, Bloomfilter},
+        Month = {June},
+        Number = {3},
+        Pages = {281-293},
+        Title = {Summary Cache: A Scalable Wide-Area Web Cache Sharing Protocol},
+        Volume = {8},
+        Year = {2000}}
+
+@article{frontier10,
+        Author = {D. Dykstra and L. Lueking},
+        Journal = {Journal of Physics: Conference Series},
+        Title = {Greatly improved cache update times for conditions data with Frontier/Squid},
+        Volume = {219},
+        Year = {2010}}
+
 @techreport{rfc3530,
         Author = {S. Shepler and B. Callaghan and D. Robinson and R. Thurlow and C. Beame and M. Eisler and D. Noveck},
         Days = 15,
