--- a/cvmfstech.tex
+++ b/cvmfstech.tex
@@ -12,6 +12,7 @@
 \providecommand{\cvmfs}{{\scshape CernVM-FS}}
 \providecommand{\redirfs}{{\scshape redirfs}}
 \providecommand{\autofs}{{\scshape autofs}}
+\providecommand{\squid}{{\scshape Squid}}
 \providecommand{\fuse}{{\scshape Fuse}}
 \providecommand{\fusex}{{\scshape Fuse4X}}
 \providecommand{\aufs}{{\scshape AUFS}}
@@ -64,7 +65,7 @@
 		
 		\includegraphics[height=4cm]{figures/cvmfs}\\[1.5cm]
   
-		\large Jakob Blomer \qquad Predrag Buncic\\[0.4cm]
+		\large Jakob Blomer \qquad Predrag Buncic \qquad René Meusel\\[0.4cm]
 		\url{jblomer@cern.ch}
 		%\today
   
